feat: control and get types investments
